# research_journal_v2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _toc.yml  environment_jb.yml  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
GMTL/: overview.md
GMTL/framework/: problem.md  use_cases.md
bibliographies/: methane.bib
cheatsheets/: bash.md  cli.md  overview.md  python.md  pytorch.md
notes/abstractions/: glossary.md  overview.md
notes/ai4nwp/: ai_forecasters.md  emulators.md
notes/algorithms/: enskf.md  pod.md  prob_pca.md  prob_pca_missing.md
notes/bayesian/: cond_variational_inference.md  confidence_intervals.md  gaussians.md  inference.md  models.md  seq_variational_inference.md  variational_inference.md
notes/da/: oi.md  sc4dvar.md
notes/extremes/: algo.md  eva.md  eve.md  evp.md  evt.md
notes/gaussian_processes/: gp_scratch.md
notes/geotoolz/: diagrams.css  geostack_notes.md  operational_attribution.md
notes/methane/: 1.1_event_modeling.md  1.2_pixels_to_predictions.md  1.3_methane_retrieval_satellites.md  2.1_matched_filter.md  2.2_beers_law.md  2.3_beers_law_rs.md  EQUATIONS.md  beers_law_analysis.md  beers_law_lut.md  beers_law_ml.md  beers_law_rtm.md  beers_law_rtm_hapi.md  roadmap.md  (+4 more)
portfolio/: overview.md  research.md  specialities.md  work.md
presentation/: stevt_v2.md
resources/: dl_stack.md  earthsci_stack.md  good_code.md  ides.md  jax_stack.md  learning_ml.md  overview.md  scale_stack.md  sci_py_stack.md  stack.md  xarray_stack.md
sciml/: overview.md
ultimate_algo/: overview.md
(+277 files in other folders)
