[project]
name = "research-journal"
version = "0.1.0"
description = "A research journal built with MyST Markdown"
authors = [{ name = "Eman", email = "eman@details.com" }]
requires-python = ">=3.11"
dependencies = [
    "mystmd",
    "jupytext",
    "pre-commit",
    "matplotlib",
    "numpy",
]

[tool.setuptools]
packages = ["bibliographies", "cheatsheets", "cookbook", "GMTL", "notes", "portfolio", "presentation", "resources", "sciml", "ultimate_algo"]

[tool.uv]
# Add any uv-specific configuration here
